--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ th, td {
 }
 
 footer {
-    background-color: #f1f1f1;
+    background-color: #227dc7;
     padding: 10px;
     text-align: center;
     margin-top: 20px;
